force-app/main/default/objects/Lead/fields/Acceptance_Basis__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Basis__c</fullName>
    <description>BR-15, BR-16, PD-12. System-written evidence explaining the deadline beside it: the acceptance policy version that ISSUED the seller-decision commitment, the governed target, and the time basis that computed it. Written by Lead_Inbound_Before_Save in the same assignment as Acceptance_Due_DateTime__c, at the moment MQL is validly granted, and never rewritten - the provenance half of the commitment, as SLA_Basis__c is for SLA_Target_DateTime__c. Without it a pinned deadline outlives the policy that set it. DESCRIBES THE COMMITMENT, NOT THE OUTCOME: it never says acceptance or rejection occurred - Sales_Acceptance_Basis__c and Sales_Rejection_Basis__c carry those, and neither overwrites this. Time basis is the documented weekend-aware approximation, NOT Salesforce Business Hours and NOT holiday-aware. Never edit by hand and never backfill.</description>
    <inlineHelpText>Why this decision deadline was set. Set by automation - do not edit.</inlineHelpText>
    <label>Acceptance Commitment Basis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>