force-app/main/default/objects/Lead/fields/Data_Quality_Detail__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Detail__c</fullName>
    <description>BR-02. Names which routing-critical attributes are missing, so an incomplete record explains itself.</description>
    <formula><![CDATA[IF(AND(NOT(ISBLANK(TEXT(CountryCode))), NOT(ISBLANK(NumberOfEmployees))), "None", "Missing: " & TRIM(IF(ISBLANK(TEXT(CountryCode)), "Country ", "") & IF(ISBLANK(NumberOfEmployees), "EmployeeCount", "")))]]></formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Which routing-critical attributes are missing on this record.</inlineHelpText>
    <label>Data Quality Detail</label>
    <type>Text</type>
</CustomField>