force-app/main/default/objects/Lead/fields/Data_Quality_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Status__c</fullName>
    <description>BR-02. Routing-critical completeness: Country and Employee Count. Formula - no automation required.</description>
    <formula><![CDATA[IF(OR(ISBLANK(TEXT(CountryCode)), ISBLANK(NumberOfEmployees)), "Incomplete", "Complete")]]></formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Complete when both routing-critical attributes are present.</inlineHelpText>
    <label>Data Quality Status</label>
    <type>Text</type>
</CustomField>