force-app/main/default/objects/Lead/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>BR-13. Stable categorical exception class for reporting and exception operations. Non-Routing Intake means ownership was intentionally preserved - it does NOT mean the Lead was placed in the routing exception queue.</description>
    <inlineHelpText>Exception class, if any. Non-Routing Intake means ownership was deliberately preserved.</inlineHelpText>
    <label>Exception Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Ambiguous Match</fullName><default>false</default><label>Ambiguous Match</label></value>
            <value><fullName>Missing Geography</fullName><default>false</default><label>Missing Geography</label></value>
            <value><fullName>Unsupported Geography</fullName><default>false</default><label>Unsupported Geography</label></value>
            <value><fullName>Non-Routing Intake</fullName><default>false</default><label>Non-Routing Intake</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>