force-app/main/default/objects/Lead/fields/First_Touch_DateTime__c.field-meta.xml
<CustomField>
    <fullName>First_Touch_DateTime__c</fullName>
    <description>BR-11. When the seller first acted, captured from the first Status transition into a working or closed value. WRITE-ONCE: once stamped it never moves, so repeated Status changes cannot rewrite history. PD-06 also allows activity-based capture; that is deferred - see implementation-log.</description>
    <inlineHelpText>When this Lead first received seller action. Stamped once.</inlineHelpText>
    <label>First Touch</label>
    <type>DateTime</type>
</CustomField>