force-app/main/default/objects/Lead/fields/Lifecycle_Stage_Entered__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Stage_Entered__c</fullName>
    <description>BR-15, BR-16, PD-09. When this Lead entered the lifecycle stage it currently holds. The single queryable stage-entry timestamp PD-09 approved - deliberately NOT one field per stage and NOT a custom history object, because Salesforce field history on Status already carries the transition trail and this answers the different question of when the current stage began. Stamped by Lead_Inbound_Before_Save on Lead creation, updated on every transition the governed policy allows, and stamped during native Salesforce Lead Conversion - validated 2026-08-27. Not manually editable: readable but not editable in every permission set that grants it.</description>
    <inlineHelpText>When this Lead entered its current lifecycle stage. Maintained by automation, not by hand.</inlineHelpText>
    <label>Lifecycle Stage Entered</label>
    <type>DateTime</type>
</CustomField>