force-app/main/default/objects/Lead/fields/Match_Status__c.field-meta.xml
<CustomField>
    <fullName>Match_Status__c</fullName>
    <description>BR-03. Outcome of Lead-to-Account identity matching. Matched = exactly one Account shares the normalized domain; Review = two or more (ambiguous); No Match = none, or no domain available.</description>
    <inlineHelpText>Whether this Lead was matched to an existing Account.</inlineHelpText>
    <label>Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Matched</fullName><default>false</default><label>Matched</label></value>
            <value><fullName>Review</fullName><default>false</default><label>Review</label></value>
            <value><fullName>No Match</fullName><default>false</default><label>No Match</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>