force-app/main/default/objects/Lead/fields/Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account__c</fullName>
    <description>BR-03. The Account this Lead was matched to. Populated only on an unambiguous match. ConvertedAccountId populates at conversion, which is too late for routing.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The existing Account this Lead belongs to.</inlineHelpText>
    <label>Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Matched Leads</relationshipLabel>
    <relationshipName>Matched_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>