force-app/main/default/objects/Lead/fields/MQL_Basis__c.field-meta.xml
<CustomField>
    <fullName>MQL_Basis__c</fullName>
    <description>BR-17, PD-14. Why this Lead qualified as MQL: the governed evidence that satisfied each required condition, plus the policy version in force at the time. EVIDENCE, NOT POLICY - it explains a decision and never defines one; the governed definition is the active MQL_Qualification_Policy__mdt record, and each requirement it declares stays owned by the metadata that already governs it. Lists only the requirements the active policy actually declares, so it stays truthful when the policy changes. Written only by Lead_Inbound_Before_Save on entry to MQL, and left in place afterwards so a later stage still carries the reason it was reached. Not a score and not machine payload.</description>
    <inlineHelpText>Why this Lead qualified as MQL. Set by automation - do not edit.</inlineHelpText>
    <label>MQL Basis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>