force-app/main/default/objects/Lead/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <description>BR-15. Human context only: what the agreed next action actually is. NEVER A QUALIFICATION REQUIREMENT - a blank value does not prevent SQL, no Flow condition reads it, and no NorthstarIQ control will interpret it. It exists because the project thesis is explainability: a reader looking at a qualified Lead should see WHAT was agreed, not only that a date exists. Kept as short text precisely so it can carry meaning without ever being mistaken for assessable evidence.</description>
    <inlineHelpText>What the agreed next action is. Context only - not a qualification requirement.</inlineHelpText>
    <label>Next Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>