force-app/main/default/objects/Lead/fields/Normalized_Domain__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Domain__c</fullName>
    <description>BR-01/BR-03. Registrable domain normalized from Website or Email. Populated by automation in a later increment; empty in Foundation. Website and Email remain the source values.</description>
    <inlineHelpText>The normalized company domain used as the primary Account match signal.</inlineHelpText>
    <label>Normalized Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>