force-app/main/default/objects/Lead/fields/Qualified_Need__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Need__c</fullName>
    <description>BR-15, BR-17, PD-14. THE SELLER INPUT that distinguishes SQL from SAL: the commercial problem Sales confirmed WITH THE PROSPECT before declaring the Lead sales-qualified. RESTRICTED picklist, deliberately - a governed vocabulary is assessable by a later control, where free-form notes are not (Lead.Description is a long text area and cannot even be filtered in SOQL). NOT product selected, NOT an Opportunity product, NOT contract scope, NOT an intent score, NOT Marketing interest and NOT seller opinion. The vocabulary is buyer-problem oriented and derives from what the business case already says NorthstarIQ sells - revenue intelligence and forecasting software. SYNTHETIC BASELINE: authored for reproducible demonstration, not a validated client requirement. Field-level value set rather than a Global Value Set because no second object consumes this vocabulary.</description>
    <inlineHelpText>The business problem Sales confirmed with the prospect.</inlineHelpText>
    <label>Qualified Need</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forecast Accuracy</fullName>
            </value>
            <value>
                <fullName>Pipeline Visibility</fullName>
            </value>
            <value>
                <fullName>Revenue Reporting Consolidation</fullName>
            </value>
            <value>
                <fullName>Sales Process Governance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>