force-app/main/default/objects/Lead/fields/Routing_Reason__c.field-meta.xml
<CustomField>
    <fullName>Routing_Reason__c</fullName>
    <description>BR-08. Why this Lead carries the owner it does: the precedence tier that resolved it, the territory in force, and the rule version. Readable without opening the Flow.</description>
    <inlineHelpText>Why this owner was selected.</inlineHelpText>
    <label>Routing Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>