force-app/main/default/objects/Lead/fields/Sales_Acceptance_Basis__c.field-meta.xml
<CustomField>
    <fullName>Sales_Acceptance_Basis__c</fullName>
    <description>BR-15, BR-16, PD-12. Why this acceptance was permitted: the requirements the active acceptance policy declared, and the policy version in force at the time. EVIDENCE, NOT POLICY - it explains a decision and defines none. Kept separate from MQL_Basis__c so the Marketing claim and the Sales acknowledgement stay independently readable; neither ever overwrites the other. Same shape as MQL_Basis__c, Segment_Basis__c and Routing_Reason__c.</description>
    <inlineHelpText>Why Sales acceptance was permitted. Set by automation - do not edit.</inlineHelpText>
    <label>Sales Acceptance Basis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>