force-app/main/default/objects/Lead/fields/Sales_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Sales_Accepted__c</fullName>
    <description>BR-15, BR-16, PD-12. THE SELLER INPUT, not evidence. A seller ticks this to explicitly accept responsibility for a Marketing-qualified Lead. It is the one field in the acceptance model a human writes, and it is deliberately separate from the three evidence fields the automation writes - so an acceptance can be asserted but never back-dated, re-attributed or silently rewritten. Ticking it does not by itself move the lifecycle: SAL still requires the governed transition. Equally, moving to SAL without ticking it is refused, which is what keeps acceptance from being inferred from Status.</description>
    <inlineHelpText>Tick to explicitly accept responsibility for this Marketing-qualified Lead.</inlineHelpText>
    <label>Sales Accepted</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>