force-app/main/default/objects/Lead/fields/Sales_Accepted_At__c.field-meta.xml
<CustomField>
    <fullName>Sales_Accepted_At__c</fullName>
    <description>BR-15, BR-16, PD-12. When Sales accepted this Lead. A SEPARATE FIELD FROM Lifecycle_Stage_Entered__c on purpose: that one answers when the Lead entered the stage it CURRENTLY holds and is overwritten on every later transition, so once the Lead reaches SQL it can no longer say when SAL was accepted. This one never moves. Written only by Lead_Inbound_Before_Save at the moment acceptance is granted.</description>
    <inlineHelpText>When Sales accepted this Lead. Set by automation - do not edit.</inlineHelpText>
    <label>Sales Accepted At</label>
    <type>DateTime</type>
</CustomField>