force-app/main/default/objects/Lead/fields/Sales_Accepted_By__c.field-meta.xml
<CustomField>
    <fullName>Sales_Accepted_By__c</fullName>
    <description>BR-15, BR-16, PD-12. Who performed the acceptance, captured from the authenticated Salesforce identity at the moment of acceptance - never free text and never inferred. DELIBERATELY NOT OwnerId: ownership is who holds the record and can be reassigned afterwards, while acceptance is who took responsibility at a point in time. They often coincide; they are not the same business fact. Also not LastModifiedById, which any later edit overwrites.</description>
    <inlineHelpText>Who accepted this Lead. Set by automation - do not edit.</inlineHelpText>
    <label>Sales Accepted By</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Leads Accepted</relationshipLabel>
    <relationshipName>Leads_Accepted</relationshipName>
    <type>Lookup</type>
</CustomField>