force-app/main/default/objects/Lead/fields/Sales_Rejected_At__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rejected_At__c</fullName>
    <description>BR-15, BR-16, PD-12. When Sales explicitly declined the MQL handoff. STOPS THE DECISION CLOCK: without a persisted rejection time an on-time rejection and a late one are indistinguishable, so the commitment could not be measured at all. A SEPARATE FIELD FROM Lifecycle_Stage_Entered__c for the same reason as Sales_Accepted_At__c - that one is overwritten on every later transition. Rejection is NOT disqualification and NOT Closed - Not Converted; the Lead remains MQL. Written only by Lead_Inbound_Before_Save at the moment a governed rejection is recorded.</description>
    <inlineHelpText>When Sales declined this handoff. Set by automation - do not edit.</inlineHelpText>
    <label>Sales Rejected At</label>
    <type>DateTime</type>
</CustomField>