force-app/main/default/objects/Lead/fields/Sales_Rejection_Basis__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rejection_Basis__c</fullName>
    <description>BR-15, BR-16, PD-12. Why this rejection was permitted and the reason given: the governed context plus the acceptance policy version in force at the time. EVIDENCE, NOT POLICY - it explains a decision and defines none. Carries the policy version because the NorthstarIQ version guard establishes which definition governed a record by reading the version out of its basis; without it a rejection recorded under one policy version could be reinterpreted against a later one. Same shape as Sales_Acceptance_Basis__c, MQL_Basis__c and Routing_Reason__c, and kept separate from all of them so each decision stays independently readable.</description>
    <inlineHelpText>Why Sales rejection was permitted. Set by automation - do not edit.</inlineHelpText>
    <label>Sales Rejection Basis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>