force-app/main/default/objects/Lead/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>BR-05. Derived from governed Segment_Band__mdt configuration. Populated by automation in a later increment.</description>
    <inlineHelpText>Derived revenue segment. Do not edit manually - see Segment Basis.</inlineHelpText>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NIQ_Segment</valueSetName>
    </valueSet>
</CustomField>