force-app/main/default/objects/Lead/fields/Segment_Basis__c.field-meta.xml
<CustomField>
    <fullName>Segment_Basis__c</fullName>
    <description>BR-05. Which rule and rule version derived the segment, and whether it was overridden.</description>
    <inlineHelpText>Why this record carries the segment it does.</inlineHelpText>
    <label>Segment Basis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>