force-app/main/default/objects/Lead/fields/SLA_Basis__c.field-meta.xml
<CustomField>
    <fullName>SLA_Basis__c</fullName>
    <description>BR-10/BR-08. Why this deadline: segment, configured hours, time basis and rule version in force at intake. WRITE-ONCE. Also records why no SLA was established, so a blank target explains itself.</description>
    <inlineHelpText>Why this SLA target was set, or why none was.</inlineHelpText>
    <label>SLA Basis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>