force-app/main/default/objects/Lead/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <description>BR-11/BR-12. Current SLA state, derived. Zero mutation - nothing writes this. Unmeasurable is deliberately distinct from Breached: an unmeasurable record is not a breached one (M-07).</description>
    <formula><![CDATA[IF(
  ISBLANK(SLA_Target_DateTime__c),
  IF( NOT(ISBLANK(TEXT(Exception_Type__c))), "Excluded", "Unmeasurable" ),
  IF(
    NOT(ISBLANK(First_Touch_DateTime__c)),
    IF( First_Touch_DateTime__c <= SLA_Target_DateTime__c, "Met", "Breached (Late Response)" ),
    IF(
      NOW() > SLA_Target_DateTime__c,
      "Breached",
      IF( NOW() > SLA_Target_DateTime__c - 0.041666667, "At Risk", "Pending" )
    )
  )
)]]></formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Current SLA state. Derived - not editable by anyone.</inlineHelpText>
    <label>SLA Status</label>
    <type>Text</type>
</CustomField>