force-app/main/default/objects/Lead/fields/SLA_Target_DateTime__c.field-meta.xml
<CustomField>
    <fullName>SLA_Target_DateTime__c</fullName>
    <description>BR-10. Response deadline established once at intake from Segment_Band__mdt. WRITE-ONCE: never recalculated, so a later configuration change cannot retarget existing Leads. Blank means no SLA was established - never a guessed deadline.</description>
    <inlineHelpText>Response deadline, set once when the Lead arrived. Not recalculated.</inlineHelpText>
    <label>SLA Target</label>
    <type>DateTime</type>
</CustomField>