force-app/main/default/objects/Lead/fields/SQL_Basis__c.field-meta.xml
<CustomField>
    <fullName>SQL_Basis__c</fullName>
    <description>BR-15, BR-17. Why this Lead was permitted to become SQL: the requirements the active SQL policy declared, the values that satisfied them, and the policy version in force. EVIDENCE, NOT POLICY - it explains a decision and defines none. Written only by Lead_Inbound_Before_Save on entry to SQL and never afterwards, so it survives later transitions and native conversion. Deliberately does NOT restate the Marketing or acceptance evidence: MQL_Basis__c and Sales_Acceptance_Basis__c still hold those, and the chain is read across the fields rather than duplicated into each one.</description>
    <inlineHelpText>Why this Lead qualified as SQL. Set by automation - do not edit.</inlineHelpText>
    <label>SQL Basis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>