force-app/main/default/objects/Lead/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>BR-06. Derived from CountryCode/StateCode via governed configuration.</description>
    <inlineHelpText>Derived territory. Independent of Segment.</inlineHelpText>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NIQ_Territory</valueSetName>
    </valueSet>
</CustomField>